Création de la doc /api/doc
